# tesina-comparador-precios-dss

backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  api_v1.py  config.py  dependencies.py  main.py
backend/app/modules/: __init__.py
backend/app/modules/basket/: __init__.py
backend/app/modules/basket/application/: __init__.py
backend/app/modules/basket/domain/: __init__.py
backend/app/modules/basket/infrastructure/: __init__.py
backend/app/modules/catalog/: __init__.py
backend/app/modules/decision/: __init__.py
backend/app/modules/geo/: __init__.py
backend/app/modules/ingestion/: __init__.py
backend/app/modules/prices/: __init__.py
backend/app/modules/supermarkets/: __init__.py
backend/app/shared/: __init__.py
backend/app/shared/application/: __init__.py  pagination.py  result.py  unit_of_work.py
backend/app/shared/domain/: __init__.py  base_entity.py  exceptions.py  money.py  value_objects.py
backend/app/shared/infrastructure/: __init__.py  database.py  logging.py  model_registry.py  settings.py  sqlalchemy_base.py  sqlalchemy_unit_of_work.py
backend/app/tests/: __init__.py
backend/app/tests/e2e/: __init__.py
backend/app/tests/integration/: __init__.py
backend/app/tests/unit/: __init__.py  test_weighted_sum_model.py
backend/dss_price_comparator_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_create_initial_price_dss_schema.py
backend/scripts/: __init__.py  seed_initial_data.py  test_uow_connection.py
(+150 files in other folders)
